--- a/app/src/main/res/layout/home_movie_row.xml
+++ b/app/src/main/res/layout/home_movie_row.xml
@@ -22,7 +22,7 @@
     <TextView
         android:id="@+id/movieTextName"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="25dp"
         android:layout_marginTop="16dp"
         android:foregroundGravity="left"
         android:gravity="left"
@@ -40,9 +40,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
-        android:text="TextView"
+        android:text="Action/Romance"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.577"
+        app:layout_constraintHorizontal_bias="0.601"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/movieTextName" />
 
